FIX- whole first portion wasn't correct, fixed population but still need to comment out in  html

--- a/webapiactivity.html
+++ b/webapiactivity.html
@@ -46,7 +46,7 @@
       <h2>Play title here</h2>
       <article id="actHere">
          <h3>Act name here</h3>
-         <div id="sceneHere">
+         <div id="sceneHeres">
 			<h4>Scene name here</h4>
 			<p class="title">scene title</p>
 			<p class="direction">stage direction</p>
