--- a/webapiactivity.html
+++ b/webapiactivity.html
@@ -9,6 +9,7 @@
 
     <script src="play-module.js" ></script> 
     <script src="webapiactivity.js" ></script>
+
 </head>
 <body>
 
@@ -25,7 +26,7 @@
       </select>
       <fieldset id="interface">
          <select id="actList"></select>
-         <select id="sceneList"></select>      
+         <select id="sceneList"></select>       
          <fieldset>
             <select id="playerList">
                <option value=0>All Players</option>
@@ -43,7 +44,7 @@
         <!-- Note you will need to remove or comment out some of this markup; 
             it is there to show you the markup that your javascript will need to generate.
         -->   
-      <h2>Play title here</h2>
+      <!-- <h2>Play title here</h2>
       <article id="actHere">
          <h3>Act name here</h3>
          <div id="sceneHere">
@@ -54,7 +55,7 @@
 			<div class="speech"><span>FRANCISCO</span><p>Nay, answer me: <b>stand</b>, and unfold yourself.</p></div>		
 			<div class="speech"><span>MARCELLUS</span><p>'Tis gone!</p><p>We do it wrong, being so majestical,</p><p>To offer it the show of violence;</p><p>For it is, as the air, invulnerable,</p><p>And our vain blows malicious mockery.</p><em>Exit Ghost</em></div>
 		 </div>
-      </article>
+      </article>  -->
    </section>
 
 </main>
