[FEAT] - added in search function and added functionality to player list

--- a/webapiactivity.html
+++ b/webapiactivity.html
@@ -47,12 +47,12 @@
          <!-- Note you will need to remove or comment out some of this markup; 
             it is there to show you the markup that your javascript will need to generate.
         -->
-         <h2>Play title here</h2>
+         <h2></h2> <!--play title here-->
          <article id="actHere">
-            <h3>Act name here</h3>
+            <h3></h3><!--act title here-->
             <div id="sceneHere">
-               <h4>Scene name here</h4>
-               <p class="title">scene title</p>
+               <h4></h4> <!--scene title here-->
+               <!-- <p class="title">s</p>
                <p class="direction">stage direction</p>
                <div class="speech"><span>BERNARDO</span>
                   <p>Who's there?</p>
@@ -65,7 +65,7 @@
                   <p>We do it wrong, being so majestical,</p>
                   <p>To offer it the show of violence;</p>
                   <p>For it is, as the air, invulnerable,</p>
-                  <p>And our vain blows malicious mockery.</p><em>Exit Ghost</em>
+                  <p>And our vain blows malicious mockery.</p><em>Exit Ghost</em> -->
                </div>
             </div>
          </article>
