--- a/webapiactivity.html
+++ b/webapiactivity.html
@@ -16,7 +16,7 @@
    <h1>Project 2 - Shakespeare Play Viewer</h1>
 </header>
 <main>
-   
+
    <aside>
       <select id="playList">
          <option value=0>Choose a Play</option>
@@ -40,9 +40,9 @@
    </aside>
 
    <section id="playHere">
-        <!-- Note you will need to remove or comment out some of this markup; 
+        Note you will need to remove or comment out some of this markup; 
             it is there to show you the markup that your javascript will need to generate.
-        -->   
+          
       <h2>Play title here</h2>
       <article id="actHere">
          <h3>Act name here</h3>
