FIX-filter works great

--- a/webapiactivity.html
+++ b/webapiactivity.html
@@ -40,14 +40,14 @@
    </aside>
 
    <section id="playHere">
-        Note you will need to remove or comment out some of this markup; 
-            it is there to show you the markup that your javascript will need to generate.
+        <!--Note you will need to remove or comment out some of this markup; 
+            it is there to show you the markup that your javascript will need to generate.-->
           
-      <h2>Play title here</h2>
+      <h2 id ="playTitle">Play title here</h2>
       <article id="actHere">
-         <h3>Act name here</h3>
+         <h3 id="actTitle">Act name here</h3>
          <div id="sceneHere">
-			<h4>Scene name here</h4>
+			<h4 id="sceneTitle">Scene name here</h4>
 			<p class="title">scene title</p>
 			<p class="direction">stage direction</p>
 			<div class="speech"><span>BERNARDO</span><p>Who's there?</p></div>		
