--- a/webapiactivity.html
+++ b/webapiactivity.html
@@ -7,8 +7,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,600;0,700;1,400;1,500&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="webapiactivity.css">
 
-    <script src="play-module.js" ></script> 
-    <script src="webapiactivity.js" ></script>
+    <script type = "module" src="play-module.js" ></script> 
+    <script type = "module" src="webapiactivity.js" ></script>
 
 </head>
 <body>
