--- a/webapiactivity.html
+++ b/webapiactivity.html
@@ -16,7 +16,7 @@
    <h1>Project 2 - Shakespeare Play Viewer</h1>
 </header>
 <main>
-
+   
    <aside>
       <select id="playList">
          <option value=0>Choose a Play</option>
@@ -35,16 +35,24 @@
             <button id="btnHighlight" >Filter</button>
          </fieldset>
       </fieldset>
+
+
    </aside>
 
    <section id="playHere">
-      <h2></h2>
+        <!-- Note you will need to remove or comment out some of this markup; 
+            it is there to show you the markup that your javascript will need to generate.
+        -->   
+      <h2>Play title here</h2>
       <article id="actHere">
-         <h3></h3>
+         <h3>Act name here</h3>
          <div id="sceneHere">
-			<h4></h4>
-			<p class="title"></p>
-			<p class="direction"></p>
+			<h4>Scene name here</h4>
+			<p class="title">scene title</p>
+			<p class="direction">stage direction</p>
+			<div class="speech"><span>BERNARDO</span><p>Who's there?</p></div>		
+			<div class="speech"><span>FRANCISCO</span><p>Nay, answer me: <b>stand</b>, and unfold yourself.</p></div>		
+			<div class="speech"><span>MARCELLUS</span><p>'Tis gone!</p><p>We do it wrong, being so majestical,</p><p>To offer it the show of violence;</p><p>For it is, as the air, invulnerable,</p><p>And our vain blows malicious mockery.</p><em>Exit Ghost</em></div>
 		 </div>
       </article>
    </section>
